2002-05-29  Christopher Faylor  <cgf@redhat.com>

	* external.cc (fillout_pinfo): Set new version field in external_pinfo
	structure.
	* include/sys/cygwin.h (external_pinfo): Replace strace_file with
	version field.

2002-05-29  Corinna Vinschen  <corinna@vinschen.de>

	Change internal uid datatype from __uid16_t to __uid32_t
	throughout.
	* cygwin.din: Export new symbols getpwuid32, getpwuid_r32, getuid32,
	geteuid32, setuid32, seteuid32.
	* passwd.cc (getpwuid32): New function.
	(getpwuid_r32): Ditto.
	* syscalls.cc (seteuid32): Ditto.
	(setuid32): Ditto.
	* uinfo.cc (getuid32): Ditto.
	(geteuid32): Ditto.
	* winsup.h (uid16touid32): New macro, correclt casting from __uid16_t
	to __uid32_t.
	(gid16togid32): Ditto fir gids.
	(getuid32): Declare.
	(geteuid32): Ditto.
	(getpwuid32): Ditto.
	* include/sys/cygwin.h (struct external_pinfo): Add members uid32 and
	gid32.

2002-05-29  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/socket.h: Protect some symbols against multiple
	definition.
	* include/netinet/ip.h: Ditto.
	* include/netinet/tcp.h: Ditto.

2002-05-29  Wu Yongwei <adah@netstd.com>

	* include/netinet/ip.h: Replace by BSD derived version of the file.
	* include/netinet/tcp.h: Ditto.
	* include/netinet/udp.h: New file.
	* include/cygwin/ip.h: Remove.

2002-05-29  Christopher Faylor  <cgf@redhat.com>

	* dtable.cc (dtable::init_std_file_from_handle): Attempt stronger
	detection of invalid handle.
	(handle_to_fn): Detect pathological condition where NT resets the
	buffer pointer to NULL on an invalid handle.

2002-05-28  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): Properly
	check for whether we should be opening the file to search for #!
	characters.  Set path_conv structure execability, too, when
	appropriate.

2002-05-28  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (set_security_attribute): Call getegid32() instead of
	getegid().
	* include/cygwin/grp.h: Declare getegid32().
