@@ -208,7 +208,8 @@ extern int cygwin_attach_handle_to_fd (char *, int, HANDLE, mode_t, DWORD);
 
 #define TTY_CONSOLE	0x40000000
 
-#define EXTERNAL_PINFO_VERSION 1
+#define EXTERNAL_PINFO_VERSION_16_BIT 0
+#define EXTERNAL_PINFO_VERSION_32_BIT 1
 
 #ifndef _SYS_TYPES_H
 typedef unsigned short __uid16_t;
@@ -241,6 +242,7 @@ struct external_pinfo
 
   DWORD process_state;
 
+  /* Only available if version >= EXTERNAL_PINFO_VERSION_32_BIT */
   __uid32_t uid32;
   __gid32_t gid32;
 };
